include/api.h


typedef uint16_t TSStateId;
typedef uint16_t TSSymbol;
typedef uint16_t TSFieldId;
typedef struct TSLanguage TSLanguage;
typedef struct TSParser TSParser;
typedef struct TSTree TSTree;
typedef enum TSSymbolType {
	TSSymbolTypeRegular,
	TSSymbolTypeAnonymous,
	TSSymbolTypeAuxiliary,
} TSSymbolType;
typedef struct TSPoint {
	uint32_t row;
	uint32_t column;
} TSPoint;
typedef struct TSRange {
	TSPoint start_point;
	TSPoint end_point;
	uint32_t start_byte;
	uint32_t end_byte;
} TSRange;
typedef struct TSInput {
	void *payload;
	const char *(*read)(void *payload, uint32_t byte_index,
			    TSPoint position, uint32_t *bytes_read);
	TSInputEncoding encoding;
} TSInput;
typedef struct TSLogger {
	void *payload;
	void (*log)(void *payload, TSLogType log_type, const char *buffer);
} TSLogger;
typedef struct TSInputEdit {
	uint32_t start_byte;
	uint32_t old_end_byte;
	uint32_t new_end_byte;
	TSPoint start_point;
	TSPoint old_end_point;
	TSPoint new_end_point;
} TSInputEdit;
typedef struct TSNode {
	uint32_t context[4];
	const void *id;
	const TSTree *tree;
} TSNode;
typedef struct TSTreeCursor {
	const void *tree;
	const void *id;
	uint32_t context[3];
} TSTreeCursor;
TSParser *ts_parser_new(void);
void ts_parser_delete(TSParser *self);
const TSLanguage *ts_parser_language(const TSParser *self);
bool ts_parser_set_language(TSParser *self, const TSLanguage *language);
bool ts_parser_set_included_ranges(TSParser *self, const TSRange *ranges,
				   uint32_t count);
const TSRange *ts_parser_included_ranges(const TSParser *self, uint32_t *count);
TSTree *ts_parser_parse(TSParser *self, const TSTree *old_tree, TSInput input);
TSTree *ts_parser_parse_string(TSParser *self, const TSTree *old_tree,
			       const char *string, uint32_t length);
void ts_parser_reset(TSParser *self);
void ts_parser_set_timeout_micros(TSParser *self, uint64_t timeout_micros);
uint64_t ts_parser_timeout_micros(const TSParser *self);
void ts_parser_set_cancellation_flag(TSParser *self, const size_t *flag);
const size_t *ts_parser_cancellation_flag(const TSParser *self);
TSLogger ts_parser_logger(const TSParser *self);
void ts_parser_print_dot_graphs(TSParser *self, int fd);
TSTree *ts_tree_copy(const TSTree *self);
void ts_tree_delete(TSTree *self);
const TSLanguage *ts_tree_language(const TSTree *self);
TSRange *ts_tree_included_ranges(const TSTree *self, uint32_t *length);
void ts_tree_edit(TSTree *self, const TSInputEdit *edit);
TSRange *ts_tree_get_changed_ranges(const TSTree *old_tree,
				    const TSTree *new_tree, uint32_t *length);
void ts_tree_print_dot_graph(const TSTree *self, int file_descriptor);
TSSymbol ts_node_symbol(TSNode self);
void ts_node_edit(TSNode *self, const TSInputEdit *edit);
TSTreeCursor ts_tree_cursor_new(TSNode node);
void ts_tree_cursor_delete(TSTreeCursor *self);
void ts_tree_cursor_reset(TSTreeCursor *self, TSNode node);
void ts_tree_cursor_reset_to(TSTreeCursor *dst, const TSTreeCursor *src);
TSNode ts_tree_cursor_current_node(const TSTreeCursor *self);
const char *ts_tree_cursor_current_field_name(const TSTreeCursor *self);
TSFieldId ts_tree_cursor_current_field_id(const TSTreeCursor *self);
bool ts_tree_cursor_goto_parent(TSTreeCursor *self);
bool ts_tree_cursor_goto_next_sibling(TSTreeCursor *self);
bool ts_tree_cursor_goto_previous_sibling(TSTreeCursor *self);
bool ts_tree_cursor_goto_first_child(TSTreeCursor *self);
bool ts_tree_cursor_goto_last_child(TSTreeCursor *self);
void ts_tree_cursor_goto_descendant(TSTreeCursor *self,
				    uint32_t goal_descendant_index);
uint32_t ts_tree_cursor_current_descendant_index(const TSTreeCursor *self);
uint32_t ts_tree_cursor_current_depth(const TSTreeCursor *self);
int64_t ts_tree_cursor_goto_first_child_for_byte(TSTreeCursor *self,
						 uint32_t goal_byte);
int64_t ts_tree_cursor_goto_first_child_for_point(TSTreeCursor *self,
						  TSPoint goal_point);
const TSLanguage *ts_language_copy(const TSLanguage *self);
void ts_language_delete(const TSLanguage *self);
uint32_t ts_language_symbol_count(const TSLanguage *self);
uint32_t ts_language_state_count(const TSLanguage *self);
const char *ts_language_symbol_name(const TSLanguage *self, TSSymbol symbol);
TSSymbol ts_language_symbol_for_name(const TSLanguage *self, const char *string,
				     uint32_t length, bool is_named);
uint32_t ts_language_field_count(const TSLanguage *self);
const char *ts_language_field_name_for_id(const TSLanguage *self, TSFieldId id);
TSFieldId ts_language_field_id_for_name(const TSLanguage *self,
					const char *name, uint32_t name_length);
TSSymbolType ts_language_symbol_type(const TSLanguage *self, TSSymbol symbol);
uint32_t ts_language_version(const TSLanguage *self);
TSStateId ts_language_next_state(const TSLanguage *self, TSStateId state,
				 TSSymbol symbol);